# CarZone

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  requirements.txt  staticfiles.json
accounts/: views.py
cars/: models.py
cars/migrations/: 0003_alter_car_features_alter_car_id_alter_car_year.py  0004_alter_car_year.py
carzone/: apps.py  urls.py  views.py
contacts/migrations/: 0002_alter_contact_id.py
contacts/static/: staticfiles.json
pages/: models.py  views.py
pages/migrations/: 0001_initial.py  0002_alter_team_google_plus_link_alter_team_twitter_link.py  0003_rename_created_at_team_created_date_and_more.py
root/: settings.py  urls.py
templates/carzone/: home.html
templates/includes/: topbar.html
