[tool.poetry]
name = "CarZone"
version = "0.1.0"
description = ""
authors = ["javokhir <inboxjavohir@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2"
Pillow = "^9.5.0"
django-ckeditor = "^6.5.1"
whitenoise = "^6.5.0"
django-allauth = "^0.54.0"
django-multiselectfield = "^0.1.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
